--- a/BackEnd/config/config.env
+++ b/BackEnd/config/config.env
@@ -3,3 +3,6 @@ DB_URI = "mongodb://localhost:27017/Ecommerce"
 JWT_SECRET_KEY=mysecretkey
 JWT_EXPIRE=3d
 EXPIRE_COOKIE=2
+SMTP_SERVICE="gmail"
+SMTP_MAIL='gp2984137@gmail.com'
+SMTP_PASSWORD='mswk mneg vshu tgqx'
